force-app/main/default/objects/Account/fields/eHS_Account_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>eHS_Account_Record_Type_Name__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <formula>RecordType.Name</formula>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>