force-app/main/default/objects/Account/fields/eHS_ACPNumber__c.field-meta.xml
<CustomField>
    <fullName>eHS_ACPNumber__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Alberta College of Pharmacists ID for a Pharmacy facility (on the Account Object).</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Only required for Pharmacies.</inlineHelpText>
    <label>ACP Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>