force-app/main/default/objects/Account/fields/eHS_Alberta_ca_Account_User_ID__c.field-meta.xml
<CustomField>
    <fullName>eHS_Alberta_ca_Account_User_ID__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Email address used to provide alberta.ca account identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Alberta.ca Account User ID</label>
    <type>Email</type>
</CustomField>