force-app/main/default/objects/Account/fields/eHS_ANP_Declaration__c.field-meta.xml
<CustomField>
    <fullName>eHS_ANP_Declaration__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Confirms the user has completed the Alberta Netcare access declaration</description>
    <label>ANP Declaration Accepted</label>
    <type>Checkbox</type>
</CustomField>