force-app/main/default/objects/Account/fields/eHS_ARP__c.field-meta.xml
<CustomField>
    <fullName>eHS_ARP__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Indicates enrollment in Clinical Alternative Relationship Plan.</description>
    <inlineHelpText>Indicates if the facility is enrolled in an alternative funding model.</inlineHelpText>
    <label>Alternative Relationship Plan</label>
    <type>Checkbox</type>
</CustomField>