force-app/main/default/objects/Account/fields/eHS_CII_CPAR_ID__c.field-meta.xml
<CustomField>
    <fullName>eHS_CII_CPAR_ID__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>The identification number used for CII/CPAR onboarding.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This ID number is used for CII/CPAR onboarding only. It may be the Facility ID, the RN assigned WDFA or Public Health Facility WDFA.</inlineHelpText>
    <label>CII/CPAR ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>