force-app/main/default/objects/Account/fields/eHS_CreatedAccountKey__c.field-meta.xml
<CustomField>
    <fullName>eHS_CreatedAccountKey__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>This field is used by the Hidden LWC to send the newly created recordId back to the Case citizen Pane of glass LWC.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>eHS_CreatedAccountKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>