force-app/main/default/objects/Account/fields/eHS_Facility_Email__c.field-meta.xml
<CustomField>
    <fullName>eHS_Facility_Email__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>