force-app/main/default/objects/Account/fields/eHS_Facility_Id__c.field-meta.xml
<CustomField>
    <fullName>eHS_Facility_Id__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Facility ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>