force-app/main/default/objects/Account/fields/eHS_Health_Zone__c.field-meta.xml
<CustomField>
    <fullName>eHS_Health_Zone__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only applicable to Primary Care Networks</inlineHelpText>
    <label>Health Zone</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Corporate Facility</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Health Zone)</relationshipLabel>
    <relationshipName>HealthZoneAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>