force-app/main/default/objects/Account/fields/eHS_iGUID__c.field-meta.xml
<CustomField>
    <fullName>eHS_iGUID__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>This is the AHS IAM iGUID</inlineHelpText>
    <label>iGUID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>