force-app/main/default/objects/Account/fields/eHS_MHR_Account_GUID__c.field-meta.xml
<CustomField>
    <fullName>eHS_MHR_Account_GUID__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Unique value for MHR Account</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>MHR Account GUID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>