force-app/main/default/objects/Account/fields/eHS_Non_Survivor_HSPID__c.field-meta.xml
<CustomField>
    <fullName>eHS_Non_Survivor_HSPID__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Non Survivor HSPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>