force-app/main/default/objects/Account/fields/eHS_Not_a_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>eHS_Not_a_Duplicate__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>This field will be used for potential duplicate records that are determined not to be actual duplicates.</description>
    <inlineHelpText>Use this field to indicate that a record identified as a potential duplicate has been reviewed and determined not to be an actual duplicate.</inlineHelpText>
    <label>Not a Duplicate</label>
    <type>Checkbox</type>
</CustomField>