force-app/main/default/objects/Account/fields/eHS_Other_Email__c.field-meta.xml
<CustomField>
    <fullName>eHS_Other_Email__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Citizen can specify alternate email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Email</label>
    <type>Email</type>
</CustomField>