force-app/main/default/objects/Account/fields/eHS_OtherBusinessPhone__c.field-meta.xml
<CustomField>
    <fullName>eHS_OtherBusinessPhone__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>