force-app/main/default/objects/Account/fields/eHS_PCN_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>eHS_PCN_Affiliation__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PCN Affiliation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Provider, Primary Care Network</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (PCN Affiliation)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>