force-app/main/default/objects/Account/fields/eHS_PHN__c.field-meta.xml
<CustomField>
    <fullName>eHS_PHN__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Personal Health Number of the Citizen</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>PHN</label>
    <length>12</length>
    <type>Text</type>
</CustomField>