force-app/main/default/objects/Account/fields/eHS_PhoneExt__c.field-meta.xml
<CustomField>
    <fullName>eHS_PhoneExt__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Extension to the phone number field on the BusinessAccount (on the Contact Object)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Ext</label>
    <length>6</length>
    <type>Text</type>
</CustomField>