force-app/main/default/objects/Account/fields/eHS_Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>eHS_Preferred_Contact_Method__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Citizen can specify preferred method of contact</description>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Other Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Other Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>