force-app/main/default/objects/Account/fields/eHS_Record_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>eHS_Record_Type_Text__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <defaultValue>IF(
  OR(
    $RecordType.DeveloperName = &quot;eHS_College_Credentialed_Provider&quot;,
    $RecordType.DeveloperName = &quot;eHS_Healthcare_Staff&quot; ),
  &quot;Provider&quot;,
  $RecordType.DeveloperName
)</defaultValue>
    <description>This field is used in the matching rule to store the record type during record creation using default value.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type Text</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>