force-app/main/default/objects/Account/fields/eHS_Status__c.field-meta.xml
<CustomField>
    <fullName>eHS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Waiting for Closure Activities</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>PNDOPDT</fullName>
                <label>Pending Open Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>