force-app/main/default/objects/Account/fields/eHS_WDFA__c.field-meta.xml
<CustomField>
    <fullName>eHS_WDFA__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <caseSensitive>true</caseSensitive>
    <description>This field is used as an external ID field to support integration and data migration</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>WDFA</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>