force-app/main/default/objects/Account/recordTypes/Corporate_Facility.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Facility</fullName>
    <active>true</active>
    <label>Corporate Facility</label>
</RecordType>