force-app/main/default/objects/Account/recordTypes/eHS_AssistedLivingAndSocialServicesOrganization.recordType-meta.xml
<RecordType>
    <fullName>eHS_AssistedLivingAndSocialServicesOrganization</fullName>
    <active>true</active>
    <description>Assisted Living and Social Services Organization Record Type</description>
    <label>Assisted Living and Social Services Organization</label>
</RecordType>