force-app/main/default/objects/Account/recordTypes/eHS_Health_Zone.recordType-meta.xml
<RecordType>
    <fullName>eHS_Health_Zone</fullName>
    <active>true</active>
    <label>Health Zone</label>
</RecordType>