force-app/main/default/objects/Account/recordTypes/eHS_Hospital_and_Surgical_Health_Organization.recordType-meta.xml
<RecordType>
    <fullName>eHS_Hospital_and_Surgical_Health_Organization</fullName>
    <active>true</active>
    <label>Hospital and Surgical Health Organization</label>
</RecordType>