force-app/main/default/objects/Account/recordTypes/eHS_Mental_Health_and_Addiction_Organization.recordType-meta.xml
<RecordType>
    <fullName>eHS_Mental_Health_and_Addiction_Organization</fullName>
    <active>true</active>
    <label>Mental Health and Addiction Organization</label>
</RecordType>