force-app/main/default/objects/Account/recordTypes/eHS_Other_Organization.recordType-meta.xml
<RecordType>
    <fullName>eHS_Other_Organization</fullName>
    <active>true</active>
    <label>Other Organization</label>
</RecordType>