force-app/main/default/objects/Account/recordTypes/eHS_Primary_and_Preventative_Health_Organization.recordType-meta.xml
<RecordType>
    <fullName>eHS_Primary_and_Preventative_Health_Organization</fullName>
    <active>true</active>
    <label>Primary and Preventative Health Organization</label>
</RecordType>