force-app/main/default/objects/Account/recordTypes/eHS_Primary_Care_Network.recordType-meta.xml
<RecordType>
    <fullName>eHS_Primary_Care_Network</fullName>
    <active>true</active>
    <label>Primary Care Network</label>
</RecordType>