force-app/main/default/objects/Account/recordTypes/eHS_Professional_College.recordType-meta.xml
<RecordType>
    <fullName>eHS_Professional_College</fullName>
    <active>true</active>
    <label>Professional College</label>
</RecordType>