force-app/main/default/objects/Account/validationRules/eHS_Birthdate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>eHS_Birthdate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>PersonBirthdate &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>PersonBirthdate</errorDisplayField>
    <errorMessage>Birthdate cannot be a future date.</errorMessage>
</ValidationRule>