force-app/main/default/objects/Account/validationRules/eHS_Email_Update_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>eHS_Email_Update_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(PersonEmail),
  NOT(ISBLANK(PRIORVALUE(PersonEmail))),
  NOT(ISBLANK(eHS_Source_System_Id__pc)),
  NOT(
    OR(
      $UserRole.Name = &apos;eHS Data Management Service&apos;,
      $Profile.Name = &apos;eHS Mulesoft User&apos;
    )
  )
)</errorConditionFormula>
    <errorDisplayField>eHS_Facility_Email__c</errorDisplayField>
    <errorMessage>This email is validated through IAM. If user needs to update their email address, submit a request through IAM.</errorMessage>
</ValidationRule>