force-app/main/default/objects/Account/validationRules/eHS_Phone_Num_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>eHS_Phone_Num_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  AND(
    NOT(ISBLANK(Phone)),
    NOT(REGEX(Phone, &quot;^\\+?[0-9\\-\\(\\)\\s]{7,20}$&quot;))
  ),
  AND(
    NOT(ISBLANK(PersonOtherPhone)),
    NOT(REGEX(PersonOtherPhone, &quot;^\\+?[0-9\\-\\(\\)\\s]{7,20}$&quot;))
  )
)</errorConditionFormula>
    <errorMessage>Phone fields must contain numbers only.</errorMessage>
</ValidationRule>