force-app/main/default/objects/Account/validationRules/eHS_Preferred_Contact_Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>eHS_Preferred_Contact_Email_Validation</fullName>
    <active>true</active>
    <description>Checks if Email field is populated when Email is selected as Preferred method of contact</description>
    <errorConditionFormula>AND(
    OR(
        $RecordType.DeveloperName = &quot;Citizen&quot;,
        $RecordType.DeveloperName = &quot;eHS_College_Credentialed_Provider&quot;
    ),
    ISPICKVAL(eHS_Preferred_Contact_Method__pc, &quot;Email&quot;),
    ISBLANK(PersonEmail)
)</errorConditionFormula>
    <errorDisplayField>PersonEmail</errorDisplayField>
    <errorMessage>Email is required when Preferred Contact Method is Email.</errorMessage>
</ValidationRule>