force-app/main/default/objects/Account/validationRules/eHS_Preferred_Contact_Oth_Em_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>eHS_Preferred_Contact_Oth_Em_Validation</fullName>
    <active>true</active>
    <description>Checks if Other Email field is populated when Other Email is selected as Preferred method of contact</description>
    <errorConditionFormula>AND(
    OR(
        $RecordType.DeveloperName = &quot;Citizen&quot;,
        $RecordType.DeveloperName = &quot;eHS_College_Credentialed_Provider&quot;
    ),
    ISPICKVAL(eHS_Preferred_Contact_Method__pc, &quot;Other Email&quot;),
    ISBLANK(eHS_Other_Email__pc)
)</errorConditionFormula>
    <errorDisplayField>eHS_Other_Email__pc</errorDisplayField>
    <errorMessage>Other Email is required when Preferred Contact Method is Other Email.</errorMessage>
</ValidationRule>