force-app/main/default/objects/Account/validationRules/eHS_Preferred_Contact_Oth_Ph_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>eHS_Preferred_Contact_Oth_Ph_Validation</fullName>
    <active>true</active>
    <description>Checks if Other Phone field is populated when Phone is selected as Preferred method of contact</description>
    <errorConditionFormula>AND(
    OR(
        $RecordType.DeveloperName = &quot;Citizen&quot;,
        $RecordType.DeveloperName = &quot;eHS_College_Credentialed_Provider&quot;
    ),
    ISPICKVAL(eHS_Preferred_Contact_Method__pc, &quot;Other Phone&quot;),
    ISBLANK(PersonOtherPhone)
)</errorConditionFormula>
    <errorDisplayField>PersonOtherPhone</errorDisplayField>
    <errorMessage>Other Phone is required when Preferred Contact Method is Other Phone.</errorMessage>
</ValidationRule>