force-app/main/default/objects/Account/validationRules/eHS_Preferred_Contact_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>eHS_Preferred_Contact_Phone_Validation</fullName>
    <active>true</active>
    <description>Checks if Phone field is populated when Phone is selected as Preferred method of contact</description>
    <errorConditionFormula>AND(
    OR(
        $RecordType.DeveloperName = &quot;Citizen&quot;,
        $RecordType.DeveloperName = &quot;eHS_College_Credentialed_Provider&quot;
    ),
    ISPICKVAL(eHS_Preferred_Contact_Method__pc, &quot;Phone&quot;),
    ISBLANK(Phone)
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone is required when Preferred Contact Method is Phone.</errorMessage>
</ValidationRule>