force-app/main/default/objects/Account/listViews/eHS_All_Citizen_Accounts.listView-meta.xml
<ListView>
    <fullName>eHS_All_Citizen_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>eHS_PHN__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Citizen</value>
    </filters>
    <label>All Citizen Accounts</label>
</ListView>