force-app/main/default/objects/Account/listViews/eHS_All_Facility_Accounts.listView-meta.xml
<ListView>
    <fullName>eHS_All_Facility_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>eHS_WDFA__c</columns>
    <columns>eHS_Facility_Id__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>eHS_Status__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Facility,Account.Corporate_Facility</value>
    </filters>
    <label>All Facility Accounts</label>
    <sharedTo>
        <group>eHS_Analytics_Service</group>
        <group>eHS_Application_Support_Service</group>
        <group>eHS_Coordinating_Agent_Service</group>
        <group>eHS_Data_Management_Service</group>
        <group>eHS_Privacy_and_Security_Service</group>
        <group>eHS_Tier_1_Provider_Contact_Centre_Servi</group>
        <group>eHS_Tier_2</group>
    </sharedTo>
</ListView>