force-app/main/default/objects/Account/listViews/eHS_All_Other_Business_Accounts.listView-meta.xml
<ListView>
    <fullName>eHS_All_Other_Business_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.eHS_Professional_College,Account.eHS_Hospital_and_Surgical_Health_Organization,Account.eHS_Primary_and_Preventative_Health_Organization,Account.eHS_Primary_Care_Network,Account.eHS_Mental_Health_and_Addiction_Organization,Account.eHS_AssistedLivingAndSocialServicesOrganization,Account.eHS_Other_Organization</value>
    </filters>
    <label>All Other Business Accounts</label>
    <sharedTo>
        <group>eHS_Analytics_Service</group>
        <group>eHS_Application_Support_Service</group>
        <group>eHS_Coordinating_Agent_Service</group>
        <group>eHS_Data_Management_Service</group>
        <group>eHS_Privacy_and_Security_Service</group>
        <group>eHS_Tier_1_Provider_Contact_Centre_Servi</group>
        <group>eHS_Tier_2</group>
    </sharedTo>
</ListView>